--- a/app/Resources/views/landing.html.twig
+++ b/app/Resources/views/landing.html.twig
@@ -47,7 +47,7 @@
 				<div class="container">
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Читать</a></li>
-						<li><a href="#one" class="button special">Подписаться</a></li>
+						<li><a href="{{ telegram_link }}" target="_blank" class="button special">Подписаться</a></li>
 					</ul>
 				</div>
 			</section>
@@ -95,7 +95,7 @@
 												data-sitekey="{{ recaptcha_site_key }}"
 												data-callback='onSubmit'
 										/></li>
-									<li><a href="" class="button">Подписаться</a></li>
+									<li><a href="{{ telegram_link }}" target="_blank" class="button">Подписаться</a></li>
 								</ul>
 							</div>
 						</div>
