Добавлены контакты в низ страницы

--- a/app/Resources/views/landing.html.twig
+++ b/app/Resources/views/landing.html.twig
@@ -103,11 +103,13 @@
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://t.me/igor_kamyshev" target="_blank" class="icon alt fa-telegram"><span class="label">Telegram</span></a></li>
+						<li><a href="https://twitter.com/igor_a_kamyshev" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/igor.a.kamyshev/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:garik.novel@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/TheNovel" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://vk.com/igor.a.kamyshev" target="_blank" class="icon alt fa-vk"><span class="label">VK</span></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100012189521895" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; before I die ...</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
