--- a/app/Resources/views/landing.html.twig
+++ b/app/Resources/views/landing.html.twig
@@ -18,9 +18,9 @@
 			<!--[if lte IE 8]><script src="{{ asset_url }}"></script><![endif]-->
 		{% endjavascripts %}
 
-		{% stylesheets 'bundles/app/css/main.css' filter='cssrewrite' %}
-			<link rel="stylesheet" href="{{ asset_url }}" />
-		{% endstylesheets %}
+		{#{% stylesheets 'bundles/app/css/main.css' filter='cssrewrite' %}#}
+			{#<link rel="stylesheet" href="{{ asset_url }}" />#}
+		{#{% endstylesheets %}#}
 
 		<script>
 			{% image '@AppBundle/Resources/public/css/images/overlay.png' %}
